# PlayerDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/playerdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/player/: BaseChannel.h  JavaCallHelper.cpp  MFFmpeg.cpp  MFFmpeg.h  VideoChannel.cpp
app/src/main/java/com/example/playerdemo/: MainActivity.java  PlayHolder.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/playerdemo/: ExampleUnitTest.java
